# Track-Karle-Expense-Tracker-

./: .gitignore  CLAUDE.md  README.md
.claude/: settings.json  settings.local.json
backend/: Dockerfile  config.py  database.py  main.py  pyproject.toml  scheduler.py
backend/alembic/: env.py
backend/alembic/versions/: 0000_initial_schema.py  0001_add_expenses_table.py  0002_add_subscriptions_table.py  0003_add_group_tables.py  0004_add_notification_tables.py  0005_add_category_type.py
backend/models/: __init__.py  base.py  category.py  expense.py  group.py  group_expense.py  notification.py  password_reset_token.py  refresh_token.py  settlement.py  subscription.py  user.py
backend/repository/: __init__.py  auth.py  base.py  category.py  expense.py  group.py  group_expense.py  notification.py  reports.py  settlement.py  subscription.py  user.py
backend/routes/: __init__.py  auth.py  categories.py  expenses.py  group_expenses.py  groups.py  notifications.py  reports.py  settlements.py  subscriptions.py  users.py
backend/schemas/: __init__.py  auth.py  category.py  common.py  expense.py  group.py  group_expense.py  notification.py  reports.py  settlement.py  subscription.py  user.py
backend/services/: __init__.py  auth.py  notification.py
docs/: api-documentation.md  architecture.md  backend.md  build.md  frontend.md
frontend/: app.json  eas.json  package-lock.json  package.json
frontend/app/: _layout.tsx  modal.tsx
frontend/components/: tab-bar.tsx  themed-text.tsx  themed-view.tsx
frontend/constants/: mock-data.ts  theme.ts
(+77 files in other folders)
