[project]
name = "backend"
version = "0.1.0"
description = "Expense Tracker API"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi[standard]>=0.128.8",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "pydantic-settings>=2.0",
    "python-jose[cryptography]>=3.3",
    "passlib[bcrypt]>=1.7",
    "python-multipart>=0.0.9",
    "aiosqlite>=0.20",
    "eval-type-backport>=0.3.1",
    "greenlet>=3.2.5",
    "bcrypt<4.0.0",
    "apscheduler>=3.10",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "httpx>=0.27",
    "pytest-asyncio>=0.23",
]
